chore: TRACEFOSS-XXX improve unit test