@@ -3,10 +3,9 @@ package org.eclipse.tractusx.traceability.shelldescriptor.infrastructure.reposit
 import org.eclipse.tractusx.traceability.shelldescriptor.domain.model.ShellDescriptor;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class RegistryShellDescriptorTest {
 
@@ -14,12 +13,13 @@ class RegistryShellDescriptorTest {
     void test_ToShellDescriptor() {
         //GIVEN
         GlobalAssetId globalAssetId = new GlobalAssetId(List.of("assetId1", "assetId2"));
-        RegistryShellDescriptor registryShellDescriptor = new RegistryShellDescriptor(globalAssetId, "", "", Collections.emptyList());
+        List<SpecificAssetId> specificAssetIds = List.of(new SpecificAssetId("manufacturerPartId", "manufacturerPartId"));
+        RegistryShellDescriptor registryShellDescriptor = new RegistryShellDescriptor(globalAssetId, "", "", specificAssetIds);
 
         //WHEN
         ShellDescriptor shellDescriptor = registryShellDescriptor.toShellDescriptor();
 
         //THEN
-        assertNull(shellDescriptor.getManufacturerId());
+        assertEquals("manufacturerPartId", shellDescriptor.getManufacturerPartId());
     }
 }
